osd: moved OpFinisher logic from OSDOp to OpContext

This allows the memory lifetime of the OpFinisher to be tightly
controlled since the OpContext cannot be copied.

Fixes: http://tracker.ceph.com/issues/20783
Signed-off-by: Jason Dillaman <dillaman@redhat.com>